Fix vcard paragraph spacing for mobile.

--- a/static/css/chadb.css
+++ b/static/css/chadb.css
@@ -174,3 +174,9 @@ hr.soften {
 .vcard p {
 	margin-bottom: 0;
 }
+
+@media (max-width: 767px) {
+	.vcard p {
+		margin-bottom: 11px;
+	}
+}
